<resources>
    <string name="app_name">SmartChew</string>
    <string name="ok">OK</string>
    <string name="preference_file_key">smartchewpref</string>
    <string name="title_activity_user_preferences">Настройки пользователя</string>
    <string name="title_activity_choice_of_dishes">Выбор блюд</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_settings">User settings</string>
    <string name="food_page_title">ПИТАНИЕ</string>
    <string name="statistics_page_title">СТАТИСТИКА</string>
    <string name="devices_page_title">УСТРОЙСТВА</string>
    <string-array name="meals_spinner_list">
        <item>Трёхразовое питание</item>
        <item>Четырёхразовое питание</item>
        <item>Пятиразовое питание</item>
        <item>Шестиразовое питание</item>
    </string-array>
    <string-array name="what_is_displayed_array">
        <item>Калории</item>
        <item>Белки</item>
        <item>Жиры</item>
        <item>Углеводы</item>
    </string-array>
    <string-array name="desired_meal_array_with_percent">
        <item>Завтрак 25%</item>
        <item>Первый перекус 5%</item>
        <item>Обед 30%</item>
        <item>Второй перекус 5%</item>
        <item>Ужин 25%</item>
        <item>Третий перекус 10%</item>
    </string-array>
    <string-array name="three_meals_array">
        <item>Завтрак</item>
        <item>Обед</item>
        <item>Ужин</item>
    </string-array>
    <string-array name="five_meals_array">
        <item>Завтрак</item>
        <item>Первый перекус</item>
        <item>Обед</item>
        <item>Второй перекус</item>
        <item>Ужин</item>
        <item>Третий перекус</item>
    </string-array>
    <string-array name="list_of_restaurants_array">
        <item>Кофе Хаус</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string-array name="pref_sex_list_titles">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>
    <string-array name="pref_sex_list_values">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>
    <string-array name="pref_age_list_titles">
        <item>14 лет</item>
        <item>15 лет</item>
        <item>16 лет</item>
        <item>17 лет</item>
        <item>18 лет</item>
        <item>19 лет</item>
        <item>20 лет</item>
        <item>21 год</item>
        <item>22 года</item>
        <item>23 года</item>
        <item>24 года</item>
        <item>25 лет</item>
        <item>26 лет</item>
        <item>27 лет</item>
        <item>28 лет</item>
        <item>29 лет</item>
        <item>30 лет</item>
        <item>31 год</item>
        <item>32 года</item>
        <item>33 года</item>
        <item>34 года</item>
        <item>35 лет</item>
        <item>36 лет</item>
        <item>37 лет</item>
        <item>38 лет</item>
        <item>39 лет</item>
        <item>40 лет</item>
        <item>41 год</item>
        <item>42 года</item>
        <item>43 года</item>
        <item>44 года</item>
        <item>45 лет</item>
        <item>46 лет</item>
        <item>47 лет</item>
        <item>48 лет</item>
        <item>49 лет</item>
        <item>50 лет</item>
        <item>51 год</item>
        <item>52 года</item>
        <item>53 года</item>
        <item>54 года</item>
        <item>55 лет</item>
        <item>56 лет</item>
        <item>57 лет</item>
        <item>58 лет</item>
        <item>59 лет</item>
        <item>60 лет</item>
        <item>61 год</item>
        <item>62 года</item>
        <item>63 года</item>
        <item>64 года</item>
        <item>65 лет</item>
        <item>66 лет</item>
        <item>67 лет</item>
        <item>68 лет</item>
        <item>69 лет</item>
        <item>70 лет</item>
        <item>71 год</item>
        <item>72 года</item>
        <item>73 года</item>
        <item>74 года</item>
        <item>75 лет</item>
        <item>76 лет</item>
        <item>77 лет</item>
        <item>78 лет</item>
        <item>79 лет</item>
        <item>80 лет</item>
        <item>81 год</item>
        <item>82 года</item>
        <item>83 года</item>
        <item>84 года</item>
        <item>85 лет</item>
        <item>86 лет</item>
        <item>87 лет</item>
        <item>88 лет</item>
        <item>89 лет</item>
        <item>90 лет</item>
    </string-array>
    <string-array name="pref_age_list_values">
        <item>14 лет</item>
        <item>15 лет</item>
        <item>16 лет</item>
        <item>17 лет</item>
        <item>18 лет</item>
        <item>19 лет</item>
        <item>20 лет</item>
        <item>21 год</item>
        <item>22 года</item>
        <item>23 года</item>
        <item>24 года</item>
        <item>25 лет</item>
        <item>26 лет</item>
        <item>27 лет</item>
        <item>28 лет</item>
        <item>29 лет</item>
        <item>30 лет</item>
        <item>31 год</item>
        <item>32 года</item>
        <item>33 года</item>
        <item>34 года</item>
        <item>35 лет</item>
        <item>36 лет</item>
        <item>37 лет</item>
        <item>38 лет</item>
        <item>39 лет</item>
        <item>40 лет</item>
        <item>41 год</item>
        <item>42 года</item>
        <item>43 года</item>
        <item>44 года</item>
        <item>45 лет</item>
        <item>46 лет</item>
        <item>47 лет</item>
        <item>48 лет</item>
        <item>49 лет</item>
        <item>50 лет</item>
        <item>51 год</item>
        <item>52 года</item>
        <item>53 года</item>
        <item>54 года</item>
        <item>55 лет</item>
        <item>56 лет</item>
        <item>57 лет</item>
        <item>58 лет</item>
        <item>59 лет</item>
        <item>60 лет</item>
        <item>61 год</item>
        <item>62 года</item>
        <item>63 года</item>
        <item>64 года</item>
        <item>65 лет</item>
        <item>66 лет</item>
        <item>67 лет</item>
        <item>68 лет</item>
        <item>69 лет</item>
        <item>70 лет</item>
        <item>71 год</item>
        <item>72 года</item>
        <item>73 года</item>
        <item>74 года</item>
        <item>75 лет</item>
        <item>76 лет</item>
        <item>77 лет</item>
        <item>78 лет</item>
        <item>79 лет</item>
        <item>80 лет</item>
        <item>81 год</item>
        <item>82 года</item>
        <item>83 года</item>
        <item>84 года</item>
        <item>85 лет</item>
        <item>86 лет</item>
        <item>87 лет</item>
        <item>88 лет</item>
        <item>89 лет</item>
        <item>90 лет</item>
    </string-array>
    <string name="dish_name">Название блюда</string>
    <string name="lean_not_lean">Постное/не постное</string>
    <string name="vegetarian_non_vegetarian">Вегетарианское/не вегетарианское</string>
    <string name="calories">Калории</string>
    <string name="_0">0</string>
    <string name="proteins">Белки</string>
</resources>