<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishInformationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_image" />

    <TextView
        android:id="@+id/limitExceededCPFCXENameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Лимит КБЖУХе"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/limitExceededCPFCXETextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Превышен"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/limitExceededCPFCXENameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/compatibilityWithIngredientsNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Совместимость с ингредиентами"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limitExceededCPFCXENameTextView" />

    <TextView
        android:id="@+id/compatibilityWithIngredientsTextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="совместимо"
        android:textColor="@color/colorDarkGreen"
        app:layout_constraintBottom_toBottomOf="@+id/compatibilityWithIngredientsNameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/compatibilityWithDishesNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Совместимость с блюдами"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compatibilityWithIngredientsNameTextView" />

    <TextView
        android:id="@+id/compatibilityWithDishesTextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="совместимо"
        android:textColor="@color/colorDarkGreen"
        app:layout_constraintBottom_toBottomOf="@+id/compatibilityWithDishesNameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/diabetesNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Для диабетиков"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compatibilityWithDishesNameTextView" />

    <TextView
        android:id="@+id/diabetesTextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Нельзя"
        android:textColor="@color/colorDarkGreen"
        app:layout_constraintBottom_toBottomOf="@+id/diabetesNameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lentenNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Постное"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diabetesTextView" />

    <TextView
        android:id="@+id/lentenTextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Нельзя"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/lentenNameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/veganNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Вегетарианство"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lentenTextView" />

    <TextView
        android:id="@+id/veganTextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Нельзя"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/veganNameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ifRemoveIngredientsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veganNameTextView" />

    <TextView
        android:id="@+id/ifRemoveIngredientsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Если вы уберёте ингредиенты: ,то блюдо будет рекомендовано к употреблению"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/allowedToEatTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/allowedToEatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Можно съесть 100%"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/containerCPFCXLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/containerCPFCXLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:layout_weight="6"
        android:baselineAligned="false"
        android:gravity="top|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/calories" />

            <TextView
                android:id="@+id/countCaloriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/proteins" />

            <TextView
                android:id="@+id/countProteinsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Жиры" />

            <TextView
                android:id="@+id/countFatsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Углеводы" />

            <TextView
                android:id="@+id/countCarbohydratesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="ХЕ" />

            <TextView
                android:id="@+id/countXETextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>